k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: project5
spec:
  selector: { app: mysql }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP
