k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  namespace: fullstack
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # /customers         -> /api/customers
    # /customers/7       -> /api/customers/7
    nginx.ingress.kubernetes.io/rewrite-target: /api/customers$2
spec:
  ingressClassName: nginx
  rules:
    - host: fullstack.com
      http:
        paths:
          - path: /customers(/|$)(.*)   # ← مجموعتان: (السلاش/النهاية) ثم الذيل كله
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
